--- a/public/styles/categories_styles.css
+++ b/public/styles/categories_styles.css
@@ -69,6 +69,10 @@ ul
 	list-style: none;
 	margin-bottom: 0px;
 }
+.product-shaow:hover
+{
+	box-shadow: 0px 0px 2px #324746;
+}
 p
 {
 	font-family: 'Poppins', sans-serif;
